# flaskScannerXSS

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_02_11_2216-b7a56e7ea079_initial.py
flaskScannerXSS/: __init__.py
scanner/: app.py  choices.py  database.py  forms.py  models.py  process.py  settings.py
templates/: 404.html  about.html  base.html  contact.html  index.html  project.html  scan.html  service.html  team.html  testimonial.html
templates/blocks/: footer.html  navbar.html
